[package]
name = "xrpl"
version = "0.1.0"
edition = "2021"
authors = ["Karamvir Singh"]
description = "websocket client library for the xrp ledger"
repository = "https://github.com/karamvirsingh98/xrpl-rs"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
