[package]
name = "xrpl"
version = "0.1.1"
edition = "2021"
authors=["Karamvir Singh"]
description="multithreaded websocket client library for the xrp ledger"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures-util = "0.3"
anyhow = "1.0"
uuid = { version = "1.3.1", features = ["v4"]}
