[package]
name = "xrpl"
version = "0.1.2"
edition = "2021"
authors=["Karamvir Singh"]
description="multithreaded websocket client library for the xrp ledger"
repository = "https://github.com/karamvirsingh98/xrpl-rs"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures-util = "0.3"
anyhow = "1.0"
uuid = { version = "1.3.1", features = ["v4"]}
serde_with = "3.0.0"
